changed header position to sticky to solve overlapping and still playing with flex

--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
     box-sizing: border-box;
     padding: 0;
 }
+body {
+    font: 700 120%/1.5 'Cormorant SC', serif;
+    background-color: black;
+}
 header {
-    position: fixed;
+    position: sticky;
     z-index: 1;
     top: 0;
     left: 0;
@@ -19,24 +23,18 @@ header {
     text-align: center;
     text-shadow: 3px 4px 4px #000;
 }
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-nav {
+nav.container  {
     flex: 1;
-    justify-content:center;
-}
-body {
-    font: 700 120%/1.5 'Cormorant SC', serif;
-    background-color: black;
+    flex-direction: row;
+    /* display: flex; */
+    justify-content: space-between;
+    align-items: center;
 }
 main {
     hyphens: auto;
 }
 article {
-    margin-top: 6rem;
+    margin-top: 1rem;
 }
 h1 {
     padding: 1px 20px;
@@ -149,7 +147,7 @@ li {
     border: solid 8px black;
     border-bottom: rgb(66, 3, 88) solid 10px;
     border-top: rgb(66, 3, 88) solid 10px;
-    /* margin-bottom: 1rem; */
+    margin:0.1rem .1rem;
     background: radial-gradient(circle, purple, black);
     font-size: 1.3rem;
     font-weight: bold;
